[package]
name = "yozuk-helper-english"
version = "0.21.0"
edition = "2021"
authors = ["picoHz <picoHz@outlook.com>"]
description = "English NLP utilities for Yozuk"
keywords = ["yozuk"]
categories = ["text-processing"]
repository = "https://github.com/yozuk/yozuk/helpers/english"
homepage = "https://yozuk.com"
documentation = "https://docs.rs/yozuk-helper-english"
license = "MIT"
readme = "README.md"

[dependencies]
Inflector = "0.11.4"
deunicode = "1.3.1"
distance = "0.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
singularize = "0.1.0"
yozuk-sdk = "0.22.0"
