[package]
name = "yozuk-helper-filetype"
version = "0.19.1"
edition = "2021"
authors = ["picoHz <picoHz@outlook.com>"]
description = "Filetype detection for Yozuk"
keywords = ["yozuk"]
categories = ["text-processing"]
repository = "https://github.com/yozuk/yozuk/helpers/platform"
homepage = "https://yozuk.com"
documentation = "https://docs.rs/yozuk-helper-platform"
license = "MIT"
readme = "README.md"

[dependencies]
chardetng = "0.1.17"
encoding_rs = "0.8.31"
file-format = "0.6.0"
mediatype = "0.19.4"
mime2ext = "0.1.52"
