[package]
name = "yozuk-helper-platform"
version = "0.17.1"
edition = "2021"
authors = ["picoHz <picoHz@outlook.com>"]
description = "Platform-dependent utilities for Yozuk"
keywords = ["yozuk"]
categories = ["text-processing"]
repository = "https://github.com/yozuk/yozuk/helpers/platform"
homepage = "https://yozuk.com"
documentation = "https://docs.rs/yozuk-helper-platform"
license = "MIT"
readme = "README.md"

[dependencies]
wasm-bindgen = "0.2.80"
time_crate = { package = "time", version = "0.3.9" }