[package]
name = "yozuk-helper-platform"
version = "0.20.1"
edition = "2021"
authors = ["picoHz <picoHz@outlook.com>"]
description = "Platform-dependent utilities for Yozuk"
keywords = ["yozuk"]
categories = ["text-processing"]
repository = "https://github.com/yozuk/yozuk/helpers/platform"
homepage = "https://yozuk.com"
documentation = "https://docs.rs/yozuk-helper-platform"
license = "MIT"
readme = "README.md"

[dependencies]
time_crate = { package = "time", version = "0.3.9" }
time-tz = "1.0.2"
atty = "0.2.14"
base64 = "0.13.0"
anyhow = "1.0.58"
semver = "1.0.12"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
wasm-bindgen = "0.2.80"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
time-tz = { version = "1.0.2", features = ["system"] }
crossterm = "0.24.0"

[target.'cfg(target_os = "wasi")'.dependencies]
wasi = "0.11.0"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
sys-locale = "0.2.1"
