[package]
name = "yozuk-skill-dice"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
mediatype = "0.19.1"
pest = "2.1.3"
pest_derive = "2.1.0"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
thiserror = "1.0.30"
yozuk-sdk = { path = "../../yozuk-sdk" }
