[package]
name = "yozuk-skill-lipsum"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
lipsum = "0.8.0"
mediatype = "0.19.1"
yozuk-helper-english = { path = "../../helpers/english" }
yozuk-sdk = "0.1.0"
serde = "1.0.136"
serde_derive = "1.0.136"
