[package]
name = "yozuk-skill-version"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
mediatype = "0.19.1"
serde = "1.0.136"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
yozuk-helper-english = { path = "../../helpers/english" }
yozuk-sdk = { path = "../../yozuk-sdk" }
